[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scripts/DeathScreen.gd" type="Script" id=1]
[ext_resource path="res://Art/MainTheme.tres" type="Theme" id=2]
[ext_resource path="res://Art/Players/BunnyEvil/BunnyEvil.png" type="Texture" id=3]
[ext_resource path="res://ShadowedTextureButton.gd" type="Script" id=4]
[ext_resource path="res://Fonts/Jack Armstrong.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Art/UI/ButtonBGDisabled.png" type="Texture" id=6]
[ext_resource path="res://Art/QR.png" type="Texture" id=7]
[ext_resource path="res://Art/UI/ButtonBG.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=4]
size = 128
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=7]
size = 32
font_data = ExtResource( 5 )

[node name="DeathScreen" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
color = Color( 0, 0, 0, 0.588235 )
script = ExtResource( 1 )

[node name="SelectionTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="ButtonCooldown" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="RedirectionTimer" type="Timer" parent="."]
wait_time = 60.0
one_shot = true

[node name="PlayerPreview" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 34.0
margin_top = -335.0
margin_right = 834.0
margin_bottom = 465.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 400, 400 )
texture = ExtResource( 3 )
flip_h = true

[node name="WonLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -572.0
margin_top = 84.0
margin_right = 572.0
margin_bottom = 229.0
custom_fonts/font = SubResource( 4 )
text = "Player X Won!"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -58.5
margin_right = 250.0
margin_bottom = 188.5
custom_constants/separation = 25

[node name="CenterContainer3" type="CenterContainer" parent="VBoxContainer"]
margin_right = 500.0
margin_bottom = 111.0

[node name="RestartButton" type="TextureButton" parent="VBoxContainer/CenterContainer3"]
margin_right = 500.0
margin_bottom = 111.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 8 )
texture_disabled = ExtResource( 6 )
script = ExtResource( 4 )

[node name="Label" type="Label" parent="VBoxContainer/CenterContainer3/RestartButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -126.0
margin_top = -27.5
margin_right = 126.0
margin_bottom = 27.5
text = "Restart"

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_top = 136.0
margin_right = 500.0
margin_bottom = 247.0

[node name="QuitButton" type="TextureButton" parent="VBoxContainer/CenterContainer"]
margin_right = 500.0
margin_bottom = 111.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 8 )
texture_disabled = ExtResource( 6 )
script = ExtResource( 4 )

[node name="Label" type="Label" parent="VBoxContainer/CenterContainer/QuitButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -61.0
margin_top = -27.5
margin_right = 61.0
margin_bottom = 27.5
text = "Quit"

[node name="QRButton" type="Panel" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 60.0
margin_top = -340.0
margin_right = 710.0
margin_bottom = 460.0
rect_scale = Vector2( 0.75, 0.75 )
rect_pivot_offset = Vector2( 300, 400 )

[node name="VBoxContainer" type="VBoxContainer" parent="QRButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -378.5
margin_right = 300.0
margin_bottom = 378.5

[node name="Label" type="Label" parent="QRButton/VBoxContainer"]
margin_right = 600.0
margin_bottom = 55.0
text = "Enjoy the game?"
align = 1

[node name="CenterContainer" type="CenterContainer" parent="QRButton/VBoxContainer"]
margin_top = 59.0
margin_right = 600.0
margin_bottom = 559.0

[node name="QR Kode" type="TextureRect" parent="QRButton/VBoxContainer/CenterContainer"]
margin_left = 50.0
margin_right = 550.0
margin_bottom = 500.0
texture = ExtResource( 7 )

[node name="Label2" type="Label" parent="QRButton/VBoxContainer"]
margin_top = 563.0
margin_right = 600.0
margin_bottom = 676.0
text = "Share it with your 
friends!"
align = 1

[node name="WinLabel" type="Label" parent="QRButton/VBoxContainer"]
margin_top = 680.0
margin_right = 600.0
margin_bottom = 757.0
custom_fonts/font = SubResource( 7 )
text = "(Press Win+Shift+S 
to screenshot)"
align = 1

[connection signal="timeout" from="SelectionTimer" to="." method="_on_SelectionTimer_timeout"]
[connection signal="timeout" from="ButtonCooldown" to="." method="_on_ButtonCooldown_timeout"]
[connection signal="timeout" from="RedirectionTimer" to="." method="_on_RedirectionTimer_timeout"]
[connection signal="pressed" from="VBoxContainer/CenterContainer3/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
